Log query string and form data

--- a/src/SFA.Apprenticeships.Web.Recruit/Web.Prod.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.Prod.config
@@ -72,6 +72,8 @@
           <property name="headers" layout="${mdlc:Headers}" />
           <property name="requestGuid" layout="${mdlc:requestGuid}" />
           <property name="headersLogged" layout="${mdlc:headersLogged}" />
+          <property name="queryString" layout="${mdlc:queryString}" />
+          <property name="formData" layout="${mdlc:formData}" />
         </layout>
       </target>
     </targets>
