--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj
@@ -94,8 +94,8 @@
       <HintPath>..\packages\EnterpriseLibrary.TransientFaultHandling.Data.6.0.1304.1\lib\NET45\Microsoft.Practices.EnterpriseLibrary.TransientFaultHandling.Data.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="StructureMap, Version=3.1.6.186, Culture=neutral, processorArchitecture=MSIL">
@@ -120,6 +120,7 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Common\ExcludeLiveClosingDateResolver.cs" />
     <Compile Include="Common\IGetOpenConnection.cs" />
     <Compile Include="Common\SqlMapperExtensionsCustom.cs" />
     <Compile Include="Common\TypeExtensions.cs" />
