ra88: moved wage type from Domain.Entities.Raa to Domain.Entities. Also fixed one and removed one unit test related to vacancy search and Wage display

--- a/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Vacancies\VacancySummary.cs" />
     <Compile Include="Vacancies\VacancyType.cs" />
     <Compile Include="Vacancies\LegacyWageType.cs" />
+    <Compile Include="Vacancies\WageType.cs" />
     <Compile Include="Vacancies\WageUnit.cs" />
   </ItemGroup>
   <ItemGroup />
