--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.UnitTests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.UnitTests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.UnitTests.csproj
@@ -123,6 +123,10 @@
       <Project>{e3f2f285-16eb-49c5-9668-8d8e1db6c610}</Project>
       <Name>SFA.Apprenticeships.Domain.Entities.Raa</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Domain.Entities\SFA.Apprenticeships.Domain.Entities.csproj">
+      <Project>{4C2BE232-4DBD-44D0-B427-0450E2D857A5}</Project>
+      <Name>SFA.Apprenticeships.Domain.Entities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Domain.Raa.Interfaces\SFA.Apprenticeships.Domain.Raa.Interfaces.csproj">
       <Project>{CF497DD1-550D-4203-8FBF-C0A3B0109D2B}</Project>
       <Name>SFA.Apprenticeships.Domain.Raa.Interfaces</Name>
