Fixed all web.configs

--- a/src/SFA.Apprenticeships.Web.Recruit/Web.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.config
@@ -216,8 +216,8 @@
           <property name="headers" layout="${mdlc:Headers}" />
           <property name="requestGuid" layout="${mdlc:requestGuid}" />
           <property name="headersLogged" layout="${mdlc:headersLogged}" />
-          <property name="queryString" layout="${mdlc:queryString}" />
-          <property name="formData" layout="${mdlc:formData}" />
+          <property name="queryString" layout="${mdlc:QueryString}" />
+          <property name="formData" layout="${mdlc:FormData}" />
         </layout>
       </target>
     </targets>
