--- a/src/SFA.Apprenticeships.Application.UnitTests/SFA.Apprenticeships.Application.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Application.UnitTests/SFA.Apprenticeships.Application.UnitTests.csproj
@@ -216,6 +216,7 @@
     <Compile Include="VacancyPosting\TestBase.cs" />
     <Compile Include="VacancyPosting\VacancyPostingServiceAuthorisationTests.cs" />
     <Compile Include="VacancyPosting\VacancyPostingServiceTests.cs" />
+    <Compile Include="Vacancy\DeleteVacancyStrategyTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
