--- a/src/SFA.Apprenticeships.Application.UnitTests/SFA.Apprenticeships.Application.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Application.UnitTests/SFA.Apprenticeships.Application.UnitTests.csproj
@@ -217,6 +217,7 @@
     <Compile Include="VacancyPosting\VacancyPostingServiceAuthorisationTests.cs" />
     <Compile Include="VacancyPosting\VacancyPostingServiceTests.cs" />
     <Compile Include="Vacancy\DeleteVacancyStrategyTests.cs" />
+    <Compile Include="Vacancy\VacancyManagementServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
