--- a/src/SFA.Apprenticeships.Domain.Entities.UnitTests/SFA.Apprenticeships.Domain.Entities.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities.UnitTests/SFA.Apprenticeships.Domain.Entities.UnitTests.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User\UserHelperLockUserTests.cs" />
     <Compile Include="Vacancies\VacancyHelperTests.cs" />
+    <Compile Include="Vacancies\WageTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SFA.Apprenticeships.Application.Interfaces\SFA.Apprenticeships.Application.Interfaces.csproj">
