--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Reporting\ReportingRepository.cs" />
     <Compile Include="Schemas\Address\Entities\PostalAddress.cs" />
     <Compile Include="Schemas\Address\Entities\ValidationSource.cs" />
+    <Compile Include="Schemas\dbo\CandidateRepository.cs" />
     <Compile Include="Schemas\dbo\Constants.cs" />
     <Compile Include="Schemas\dbo\DbHelpers.cs" />
     <Compile Include="Schemas\dbo\Entities\Employer.cs" />
