--- a/src/SFA.Apprenticeships.Application.Candidates/SFA.Apprenticeships.Application.Candidates.csproj
+++ b/src/SFA.Apprenticeships.Application.Candidates/SFA.Apprenticeships.Application.Candidates.csproj
@@ -99,9 +99,11 @@
     <Compile Include="Strategies\HousekeepingStrategy.cs" />
     <Compile Include="Strategies\IHousekeepingStrategy.cs" />
     <Compile Include="Strategies\ActivationReminder\SendAccountRemindersStrategy.cs" />
+    <Compile Include="Strategies\ISetCandidateDeletionPendingStrategy.cs" />
     <Compile Include="Strategies\MobileVerificationCodeReminderHousekeeping.cs" />
     <Compile Include="Strategies\SendMobileVerificationCodeReminderStrategy.cs" />
     <Compile Include="Strategies\ActivationReminder\SetPendingDeletionStrategy.cs" />
+    <Compile Include="Strategies\SetCandidateDeletionPendingStrategy.cs" />
     <Compile Include="Strategies\TerminatingHousekeepingStrategy.cs" />
   </ItemGroup>
   <ItemGroup>
