--- a/src/SFA.Apprenticeships.Infrastructure.LegacyWebServices/SFA.Apprenticeships.Infrastructure.LegacyWebServices.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.LegacyWebServices/SFA.Apprenticeships.Infrastructure.LegacyWebServices.csproj
@@ -231,9 +231,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SFA.Apprenticeships.Application.Applications\SFA.Apprenticeships.Application.Applications.csproj">
-      <Project>{F5F29922-2FBC-4BF4-9CBB-424A71FD98C1}</Project>
-      <Name>SFA.Apprenticeships.Application.Applications</Name>
+    <ProjectReference Include="..\SFA.Apprenticeships.Application.Application\SFA.Apprenticeships.Application.Application.csproj">
+      <Project>{7d29ed20-ff3d-4fbb-b253-a44de1e42bcc}</Project>
+      <Name>SFA.Apprenticeships.Application.Application</Name>
     </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Application.Candidate\SFA.Apprenticeships.Application.Candidate.csproj">
       <Project>{984F8CD2-61B3-48A4-B0CC-5D05E235983D}</Project>
