--- a/src/SFA.Apprenticeships.Web.Candidate.UnitTests/SFA.Apprenticeships.Web.Candidate.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Candidate.UnitTests/SFA.Apprenticeships.Web.Candidate.UnitTests.csproj
@@ -367,6 +367,7 @@
     <Compile Include="Views\Register\MarketingOptInConsent.cs" />
     <Compile Include="Views\Settings\CommunicationsPreferencesTests.cs" />
     <Compile Include="Views\Settings\MarketingOptInTests.cs" />
+    <Compile Include="Views\Settings\DeleteAccountTests.cs" />
     <Compile Include="Views\Settings\SavedSearchTests.cs" />
     <Compile Include="Views\Settings\SettingsTests.cs" />
     <Compile Include="Views\Settings\SettingsViewBuilder.cs" />
