--- a/src/SFA.Apprenticeships.Application.Vacancy/SFA.Apprenticeships.Application.Vacancy.csproj
+++ b/src/SFA.Apprenticeships.Application.Vacancy/SFA.Apprenticeships.Application.Vacancy.csproj
@@ -129,6 +129,10 @@
       <Project>{CF497DD1-550D-4203-8FBF-C0A3B0109D2B}</Project>
       <Name>SFA.Apprenticeships.Domain.Raa.Interfaces</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Presentation\SFA.Apprenticeships.Infrastructure.Presentation.csproj">
+      <Project>{83500887-e1b7-46bd-945b-4cc3d0069b6e}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Presentation</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
