Updated web.config, index.html, offline.css. Created content folder.

--- a/static/avms-helppage/Web.config
+++ b/static/avms-helppage/Web.config
@@ -9,15 +9,22 @@
 			<staticContent>
 				<clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="00:00:01" />
 			</staticContent>
+			<httpRedirect enabled="false" />
 		</system.webServer>
 	</location>
+	<location path="content">
+		<system.webServer>
+			<httpRedirect enabled="false" />
+		</system.webServer>	
+	</location>	
     <system.webServer>
+        <!--<httpRedirect enabled="true" exactDestination="true" httpResponseStatus="Found">
+            <add wildcard="/help" destination="/index.html" />
+        </httpRedirect>-->
+		<httpRedirect enabled="true" destination="/index.html" exactDestination="true" httpResponseStatus="Permanent" />		
         <httpErrors errorMode="Custom">
             <remove statusCode="404" subStatusCode="-1" />
             <error statusCode="404" prefixLanguageFilePath="" path="/index.html" responseMode="ExecuteURL" />
-        </httpErrors>
-        <httpRedirect enabled="true" exactDestination="true" httpResponseStatus="Found">
-            <add wildcard="*" destination="/index.html" />
-        </httpRedirect>        
+        </httpErrors>      
     </system.webServer>
 </configuration>
