Updated dev to point to naspreacs and changed redirect for AVMS help page.

--- a/static/avms-helppage/Web.config
+++ b/static/avms-helppage/Web.config
@@ -18,10 +18,8 @@
 		</system.webServer>	
 	</location>	
     <system.webServer>
-        <!--<httpRedirect enabled="true" exactDestination="true" httpResponseStatus="Found">
-            <add wildcard="/help" destination="/index.html" />
-        </httpRedirect>-->
-		<httpRedirect enabled="true" destination="/index.html" exactDestination="true" httpResponseStatus="Permanent" />		
+		<!--<httpRedirect enabled="true" destination="/index.html" exactDestination="true" httpResponseStatus="Permanent" />		-->
+		<httpRedirect enabled="true" destination="" httpResponseStatus="Permanent" />
         <httpErrors errorMode="Custom">
             <remove statusCode="404" subStatusCode="-1" />
             <error statusCode="404" prefixLanguageFilePath="" path="/index.html" responseMode="ExecuteURL" />
