Added ReleaseNote table

--- a/src/SFA.Apprenticeships.Domain.Entities.Raa/SFA.Apprenticeships.Domain.Entities.Raa.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities.Raa/SFA.Apprenticeships.Domain.Entities.Raa.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Reference\Region.cs" />
     <Compile Include="Reference\RegionalTeam.cs" />
     <Compile Include="Reference\RegionalTeamMapper.cs" />
+    <Compile Include="Reference\ReleaseNote.cs" />
     <Compile Include="Reporting\ApplicationsReceivedResultItem.cs" />
     <Compile Include="Reporting\CandidatesWithApplicationsResultItem.cs" />
     <Compile Include="Reporting\InformationRadiatorData.cs" />
