--- a/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
@@ -126,6 +126,8 @@
     <Compile Include="ReferenceData\Category.cs" />
     <Compile Include="ReferenceData\CategoryPrefixes.cs" />
     <Compile Include="ReferenceData\CategoryType.cs" />
+    <Compile Include="ReferenceData\DasApplication.cs" />
+    <Compile Include="ReferenceData\ReleaseNote.cs" />
     <Compile Include="ReferenceNumber.cs" />
     <Compile Include="Users\Name.cs" />
     <Compile Include="Users\ProviderStatuses.cs" />
