--- a/src/SFA.Apprenticeships.Domain.Raa.Interfaces/SFA.Apprenticeships.Domain.Raa.Interfaces.csproj
+++ b/src/SFA.Apprenticeships.Domain.Raa.Interfaces/SFA.Apprenticeships.Domain.Raa.Interfaces.csproj
@@ -107,6 +107,10 @@
       <Project>{e3f2f285-16eb-49c5-9668-8d8e1db6c610}</Project>
       <Name>SFA.Apprenticeships.Domain.Entities.Raa</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Domain.Entities\SFA.Apprenticeships.Domain.Entities.csproj">
+      <Project>{4c2be232-4dbd-44d0-b427-0450e2d857a5}</Project>
+      <Name>SFA.Apprenticeships.Domain.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
