--- a/src/SFA.Apprenticeships.Infrastructure.UnitTests/SFA.Apprenticeships.Infrastructure.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.UnitTests/SFA.Apprenticeships.Infrastructure.UnitTests.csproj
@@ -213,6 +213,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Raa\Extensions\VacancyExtensions\GetCategoryTests.cs" />
     <Compile Include="Raa\Extensions\VacancyExtensions\VacancyExtensionsTests.cs" />
+    <Compile Include="Raa\GetReleaseNotesStrategyTests.cs" />
     <Compile Include="Raa\Mappers\TraineeshipVacancyDetailMapperTests.cs" />
     <Compile Include="Raa\Mappers\TraineeshipSummaryMapperTests.cs" />
     <Compile Include="Raa\Mappers\ApprenticeshipSummaryMapperTests.cs" />
